--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/dekelton",
-            "index": "/src/index.html",
+            "index": "dist/dekelton/browser/index.html",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
